--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
         <!-- Marketing Icons Section -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">
-                    Welcome to Ichi ByōShi Kendo Club
+                <h1 class="page-header" style="background-color:#ff6347;">
+                    Due to the Government guidelines for mitigation of the Covid 19 virus we will be cancelling training until probably May.</br>
                 </h1>
             </div>
             <div class="col-md-4">
